--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.15"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
